[tool.poetry]
name = "btp-llm-github-pull-analyzer"
version = "1.0.0"
description = "A program to analyze GitHub pull requests via BTP LLM."
authors = ["SAP"]
readme = "README.md"
repository = "https://github.tools.sap/sap-samples/btp-llm-github-pull-analyzer"

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
flake8 = ">=7.0.0"
requests = "^2.31.0"
python = ">3.11,<4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
minversion = "7.2.2"
addopts = "--no-header -v"
testpaths = [
    "tests"
]
log_cli = true
log_level = 'DEBUG'

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "1.3.54"
tag_format = "$version"
version_files = [
  "pyproject.toml:version",
  "program/__version__.py"
]